Added markdown support for endpoint docstrings

--- a/rest_framework_docs/templates/rest_framework_docs/home.html
+++ b/rest_framework_docs/templates/rest_framework_docs/home.html
@@ -1,5 +1,7 @@
 {% extends "rest_framework_docs/docs.html" %}
 
+{% load markdown %}
+
 {% block apps_menu %}
 {% regroup endpoints by name_parent as endpoints_grouped %}
 <li class="dropdown">
@@ -56,7 +58,7 @@
         <div id="{{ endpoint.path|slugify }}" class="panel-collapse collapse" role="tabpanel">
           <div class="panel-body">
             {% if endpoint.docstring %}
-            <p class="lead">{{ endpoint.docstring }}</p>
+            <p class="lead">{{ endpoint.docstring|markdown:'safe' }}</p>
             {% endif %}
 
             {% if endpoint.errors %}
