Use (Font Awesome) hand-o-up instead of plug for better UX.
http://fontawesome.io/icons/

--- a/rest_framework_docs/templates/rest_framework_docs/home.html
+++ b/rest_framework_docs/templates/rest_framework_docs/home.html
@@ -49,7 +49,7 @@
                     data-methods="{{ endpoint.allowed_methods }}"
                     data-permissions="{{ endpoint.permissions }}"
                     data-fields="{{ endpoint.fields_json }}">
-                    <i class="fa fa-plug"></i></li>
+                    <i class="fa fa-hand-o-up"></i></li>
               </ul>
             </div>
           </div>
